--- a/src/MainWindow.fxml
+++ b/src/MainWindow.fxml
@@ -6,6 +6,6 @@
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MainWindowController">
    <children>
       <Button fx:id="mecanicos" layoutX="39.0" layoutY="59.0" mnemonicParsing="false" onMouseClicked="#OnMecanicosClicked" prefHeight="283.0" prefWidth="251.0" text="Mecânicos" />
-      <Button fx:id="clientes" layoutX="311.0" layoutY="59.0" mnemonicParsing="false" onMouseClicked="#OnClientesClicked" prefHeight="283.0" prefWidth="251.0" text="Clientes" />
+      <Button fx:id="clientes" layoutX="311.0" layoutY="59.0" mnemonicParsing="false" onMouseClicked="#OnClientsClicked" prefHeight="283.0" prefWidth="251.0" text="Clientes" />
    </children>
 </AnchorPane>
