--- a/src/ClientesWindow.fxml
+++ b/src/ClientesWindow.fxml
@@ -2,9 +2,54 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Clientes">
+<AnchorPane prefHeight="167.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ClientesController">
    <children>
-      <Label layoutX="226.0" layoutY="134.0" text="Janela Cliente" />
+      <TextField fx:id="modelo" layoutX="119.0" layoutY="34.0" />
+      <Line endX="16.0" endY="218.5" layoutX="271.0" layoutY="133.0" startX="16.0" startY="-133.0" />
+      <Label layoutX="29.0" layoutY="33.0" text="Modelo">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <TextField fx:id="ano" layoutX="119.0" layoutY="84.0" />
+      <Label layoutX="29.0" layoutY="83.0" text="Ano">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <TextField fx:id="dono" layoutX="119.0" layoutY="130.0" />
+      <Label layoutX="29.0" layoutY="129.0" text="Dono">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <Button fx:id="addcar" layoutX="60.0" layoutY="200.0" mnemonicParsing="false" onMouseClicked="#AddCar" prefHeight="48.0" prefWidth="177.0" text="Adicionar Carro">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Button>
+      <Button fx:id="checkcar" layoutX="60.0" layoutY="281.0" mnemonicParsing="false" onMouseClicked="#CheckCar" prefHeight="48.0" prefWidth="177.0" text="Verificar Carro">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Button>
+      <Label fx:id="labelcarro" alignment="CENTER" layoutX="353.0" layoutY="32.0" prefHeight="177.0" prefWidth="177.0" textAlignment="CENTER" wrapText="true">
+         <font>
+            <Font size="13.0" />
+         </font>
+      </Label>
+      <Button fx:id="takecar" layoutX="353.0" layoutY="227.0" mnemonicParsing="false" onMouseClicked="#TakeCar" prefHeight="48.0" prefWidth="177.0" text="Levantar Carro">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Button>
+      <Label fx:id="labelpronto" alignment="CENTER" contentDisplay="CENTER" layoutX="311.0" layoutY="281.0" prefHeight="48.0" prefWidth="260.0" textAlignment="CENTER" wrapText="true">
+         <font>
+            <Font size="13.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
