--- a/src/ClientesWindow.fxml
+++ b/src/ClientesWindow.fxml
@@ -36,7 +36,7 @@
             <Font size="18.0" />
          </font>
       </Button>
-      <Label fx:id="labelcarro" alignment="CENTER" layoutX="353.0" layoutY="32.0" prefHeight="177.0" prefWidth="177.0" textAlignment="CENTER" wrapText="true">
+      <Label fx:id="labelcarro" alignment="CENTER" contentDisplay="CENTER" layoutX="353.0" layoutY="32.0" prefHeight="177.0" prefWidth="177.0" textAlignment="CENTER" wrapText="true">
          <font>
             <Font size="13.0" />
          </font>
