--- a/src/MecanicosListWindow.fxml
+++ b/src/MecanicosListWindow.fxml
@@ -26,5 +26,6 @@
       <Button fx:id="vercar" layoutX="363.0" layoutY="419.0" mnemonicParsing="false" onMouseClicked="#VerCar" prefHeight="25.0" prefWidth="150.0" text="Verificar Carro Atual" />
       <Button fx:id="updatehorario" layoutX="363.0" layoutY="465.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="150.0" text="Atualizar Horário" />
       <Label fx:id="cars" alignment="CENTER" contentDisplay="CENTER" layoutX="655.0" layoutY="95.0" prefHeight="421.0" prefWidth="421.0" textAlignment="CENTER" wrapText="true" />
+      <Label fx:id="carroatual" alignment="CENTER" contentDisplay="CENTER" layoutX="94.0" layoutY="349.0" prefHeight="207.0" prefWidth="193.0" textAlignment="CENTER" wrapText="true" />
    </children>
 </AnchorPane>
