--- a/src/ReciboWindow.fxml
+++ b/src/ReciboWindow.fxml
@@ -16,7 +16,7 @@
             <Font size="15.0" />
          </font>
       </Label>
-      <TextField fx:id="contribuinte" layoutX="83.0" layoutY="80.0" />
+      <TextField fx:id="contribuinte" alignment="CENTER" layoutX="83.0" layoutY="80.0" />
       <Label alignment="CENTER" contentDisplay="CENTER" layoutX="64.0" layoutY="48.0" prefHeight="26.0" prefWidth="188.0" text="Número de Contribuinte" textAlignment="CENTER" />
       <Label fx:id="recibo" alignment="CENTER" contentDisplay="CENTER" layoutX="64.0" layoutY="216.0" prefHeight="164.0" prefWidth="188.0" textAlignment="CENTER">
          <font>
