--- a/src/MecanicosListWindow.fxml
+++ b/src/MecanicosListWindow.fxml
@@ -25,7 +25,7 @@
       <Button fx:id="passarslot" layoutX="363.0" layoutY="377.0" mnemonicParsing="false" onMouseClicked="#PassarSlot" prefHeight="25.0" prefWidth="150.0" text="Passar Slot" />
       <Button fx:id="vercar" layoutX="363.0" layoutY="419.0" mnemonicParsing="false" onMouseClicked="#VerCar" prefHeight="25.0" prefWidth="150.0" text="Verificar Carro Atual" />
       <Button fx:id="updatehorario" layoutX="363.0" layoutY="465.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="150.0" text="Atualizar Horário" />
-      <Label fx:id="cars" alignment="CENTER" contentDisplay="CENTER" layoutX="655.0" layoutY="79.0" prefHeight="390.0" prefWidth="421.0" textAlignment="CENTER" wrapText="true" />
+      <Label fx:id="cars" alignment="CENTER" contentDisplay="CENTER" layoutX="655.0" layoutY="79.0" prefHeight="181.0" prefWidth="421.0" textAlignment="CENTER" wrapText="true" />
       <Label fx:id="carroatual" alignment="CENTER" contentDisplay="CENTER" layoutX="94.0" layoutY="349.0" prefHeight="207.0" prefWidth="193.0" textAlignment="CENTER" wrapText="true" />
       <Label layoutX="792.0" layoutY="23.0" text="Horário Semanal">
          <font>
@@ -33,5 +33,14 @@
          </font>
       </Label>
       <Label fx:id="trabsemanal" alignment="CENTER" contentDisplay="CENTER" layoutX="655.0" layoutY="478.0" prefHeight="65.0" prefWidth="421.0" textAlignment="CENTER" wrapText="true" />
+      <TableView fx:id="tv1" layoutX="678.0" layoutY="290.0" prefHeight="200.0" prefWidth="376.0">
+        <columns>
+          <TableColumn fx:id="tc1" prefWidth="75.0" text="2a" />
+            <TableColumn fx:id="tc2" prefWidth="75.0" text="3a" />
+            <TableColumn fx:id="tc3" prefWidth="75.0" text="4a" />
+            <TableColumn fx:id="tc4" prefWidth="75.0" text="5a" />
+            <TableColumn fx:id="tc5" prefWidth="75.0" text="6a" />
+        </columns>
+      </TableView>
    </children>
 </AnchorPane>
