Alterações na GUI

--- a/src/GestorWindow.fxml
+++ b/src/GestorWindow.fxml
@@ -4,11 +4,11 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="663.0" prefWidth="697.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GestorWindowController">
+<AnchorPane prefHeight="654.0" prefWidth="917.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GestorWindowController">
    <children>
       <ListView fx:id="carListView" editable="true" layoutX="160.0" layoutY="55.0" prefHeight="476.0" prefWidth="237.0" />
       <Button fx:id="verCarros" layoutX="23.0" layoutY="55.0" mnemonicParsing="false" onMouseClicked="#checkCarList" prefHeight="33.0" prefWidth="113.0" text="Ver Carros" />
-      <ListView fx:id="mecListView" layoutX="416.0" layoutY="55.0" onMouseClicked="#showCarsToFix" prefHeight="372.0" prefWidth="237.0" />
+      <ListView fx:id="mecListView" layoutX="416.0" layoutY="55.0" onMouseClicked="#showCarsToFix" prefHeight="576.0" prefWidth="237.0" />
       <Button fx:id="verMecanicos" layoutX="23.0" layoutY="98.0" mnemonicParsing="false" onMouseClicked="#checkMecList" prefHeight="33.0" prefWidth="113.0" text="Ver Mecânicos" />
       <Label layoutX="190.0" layoutY="14.0" text="Carros em Espera">
          <font>
@@ -26,12 +26,12 @@
             <Font size="17.0" />
          </font>
       </Label>
-      <Label fx:id="carrosPorArranjarLabel" layoutX="405.0" layoutY="435.0" text="Carros Por Arranjar do Mecânico Selecionado">
+      <Label fx:id="carrosPorArranjarLabel" layoutX="664.0" layoutY="313.0" prefHeight="59.0" prefWidth="240.0" text="Carros Por Arranjar do Mecânico Selecionado" textAlignment="CENTER" wrapText="true">
          <font>
-            <Font size="13.0" />
+            <Font size="18.0" />
          </font>
       </Label>
-      <ListView fx:id="carrosPorArranjarListView" editable="true" layoutX="416.0" layoutY="462.0" onMouseClicked="#carrosPorArranjarListView" prefHeight="180.0" prefWidth="237.0" />
+      <ListView fx:id="carrosPorArranjarListView" editable="true" layoutX="664.0" layoutY="372.0" onMouseClicked="#carrosPorArranjarListView" prefHeight="260.0" prefWidth="237.0" />
       <Button fx:id="gerirEspecializacao" layoutX="23.0" layoutY="512.0" mnemonicParsing="false" onMouseClicked="#atribuirEspecializacao" prefHeight="81.0" prefWidth="113.0" text="Gerir Carros por Especialização para Todos os Mecânicos" textAlignment="CENTER" wrapText="true" />
       <Button fx:id="addCarPriority" layoutX="23.0" layoutY="230.0" mnemonicParsing="false" onMouseClicked="#AddCarPriority" prefHeight="59.0" prefWidth="113.0" text="Adicionar Carro ao Mecânico - Com Prioridade" textAlignment="CENTER" wrapText="true" />
       <Button fx:id="addCar" layoutX="23.0" layoutY="302.0" mnemonicParsing="false" onMouseClicked="#AddCar" prefHeight="59.0" prefWidth="113.0" text="Adicionar Carro ao Mecânico - Sem Prioridade" textAlignment="CENTER" wrapText="true" />
@@ -46,5 +46,14 @@
             <Font size="13.0" />
          </font>
       </Label>
+      <TextField fx:id="nome" layoutX="753.0" layoutY="59.0" prefHeight="25.0" prefWidth="150.0" />
+      <Label layoutX="673.0" layoutY="63.0" text="Nome" />
+      <TextField fx:id="especializacao" layoutX="753.0" layoutY="98.0" prefHeight="25.0" prefWidth="150.0" />
+      <Label layoutX="673.0" layoutY="102.0" text="Especialização" />
+      <TextField fx:id="salario" layoutX="753.0" layoutY="137.0" prefHeight="25.0" prefWidth="150.0" />
+      <Label layoutX="673.0" layoutY="141.0" text="Salário" />
+      <Button fx:id="addMec" layoutX="753.0" layoutY="183.0" mnemonicParsing="false" onMouseClicked="#AddMec" prefHeight="33.0" prefWidth="150.0" text="Adicionar Mecânico" />
+      <Button fx:id="rvMec" layoutX="753.0" layoutY="225.0" mnemonicParsing="false" onMouseClicked="#RemMec" prefHeight="33.0" prefWidth="150.0" text="Remover Mecânico" />
+      <Label fx:id="mecanicos" layoutX="665.0" layoutY="270.0" prefHeight="46.0" prefWidth="237.0" textAlignment="CENTER" wrapText="true" />
    </children>
 </AnchorPane>
